part-1/todo/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todoapp 
spec:
  selector:
    matchLabels:
      app: todo
  template:
    metadata:
      labels:
        app: todo
    spec:
      containers:
      - name: todo
        image: jimryan/todo
